fix color selection z-index

--- a/frontend/src/components/ListMenuItems/ColorBox.css
+++ b/frontend/src/components/ListMenuItems/ColorBox.css
@@ -1,10 +1,11 @@
 .color-box {
-  width: 40px;
-  height: 40px;
+  min-width: 2rem;
+  min-height: 2rem;
+  opacity: 1;
 }
 
 .color-box:hover {
-  outline: 2px solid #00a2ff;
+  outline: 2px solid #51fff6;
   filter: brightness(90%);
 }
 
