--- a/frontend/src/components/ListMenuItems/ListMenuItems.css
+++ b/frontend/src/components/ListMenuItems/ListMenuItems.css
@@ -5,6 +5,7 @@
   top: -8px;
   background-color: white;
   border-radius: 2px;
+  max-width: 400px;
 }
 
 .list-menu-items .menu-item {
